GNOME Bugzilla – Bug 777821
ui: Capitalisation and Unicode fixes for translatable strings
Last modified: 2017-01-30 15:55:46 UTC
A few small patches attached.
Created attachment 344386 [details] [review] ui: Fix capitalisation of a button label Make the capitalisation consistent within the UI, and consistently follow the HIG: https://developer.gnome.org/hig/stable/writing-style.html.en#capitalization
Created attachment 344387 [details] [review] ui: Use Unicode quotation marks and ellipses These look better than straight quotation marks and ellipses.
Review of attachment 344386 [details] [review]: ok
Review of attachment 344387 [details] [review]: ::: gnome-initial-setup/pages/summary/gis-summary-page.ui @@ +62,3 @@ <object class="GtkLabel" id="title"> <property name="visible">True</property> + <property name="label" translatable="yes">You’re ready to go!</property> This isn't quotation though, but I'm not a native speaker, does it really look better like this?
Review of attachment 344387 [details] [review]: ::: gnome-initial-setup/pages/summary/gis-summary-page.ui @@ +62,3 @@ <object class="GtkLabel" id="title"> <property name="visible">True</property> + <property name="label" translatable="yes">You’re ready to go!</property> It does look better. The right single quotation mark is the preferred Unicode character for an apostrophe: https://en.wikipedia.org/wiki/Apostrophe#Unicode
Review of attachment 344387 [details] [review]: ::: gnome-initial-setup/pages/summary/gis-summary-page.ui @@ +62,3 @@ <object class="GtkLabel" id="title"> <property name="visible">True</property> + <property name="label" translatable="yes">You’re ready to go!</property> Ok then, thanks for the link and the patches!
Thanks for the reviews! Attachment 344386 [details] pushed as b1ac895 - ui: Fix capitalisation of a button label Attachment 344387 [details] pushed as da81174 - ui: Use Unicode quotation marks and ellipses