ui: Fix capitalisation of a button label

Make the capitalisation consistent within the UI, and consistently
follow the HIG:

https://developer.gnome.org/hig/stable/writing-style.html.en#capitalization

https://bugzilla.gnome.org/show_bug.cgi?id=777821