gnome-initial-setup/pages/summary/gis-summary-page.c
@@ -325,7 +325,7 @@ update_distro_name (GisSummaryPage *page)
   /* Translators: the parameter here is the name of a distribution,
    * like "Fedora" or "Ubuntu". It falls back to "GNOME 3" if we can't
    * detect any distribution. */
-  text = g_strdup_printf (_("_Start using %s"), name);
+  text = g_strdup_printf (_("_Start Using %s"), name);
   gtk_label_set_label (GTK_LABEL (priv->start_button_label), text);
   g_free (text);
 
